<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SocProxNew</string>
    <string name="action_settings">Settings</string>
    <string name="challenge_section">Challenges</string>
    <string name="stats_section">Statistics</string>
    <string name="desc_fbutton">An image of the logo</string>
    <string name="password_hint">Password</string>
    <string name="user_name_hint">Username</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="desc_logo">An image of the logo</string>
    <string name="service_name">Proximity Service</string>
    <string name="email_hint">Email</string>
    <string name="password_hint2">Confirm Password</string>
    <string name="challenges_completed">Challenges Completed</string>
    <string name="total_points">Total Points</string>
    <string name="description">Description</string>

</resources>
