<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="300dp"
        android:layout_height="293dp"
        android:layout_gravity="center"
        android:contentDescription="@string/desc_logo"
        android:src="@drawable/logo" />

    <ImageButton
        android:id="@+id/btn_fblogin"
        android:contentDescription="@string/desc_fbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onFBLoginButtonClicked"
        android:src="@drawable/fconnect" />
    
    <EditText
	    android:id="@+id/user_name"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:hint="@string/user_name_hint"
	    android:inputType="text"
	    android:imeOptions="actionNext" 
	    android:textColor="#ffffff"/>
    
    <EditText
	    android:id="@+id/email"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:hint="@string/email_hint"
	    android:inputType="textEmailAddress"
	    android:imeOptions="actionNext" 
	    android:textColor="#ffffff"/>
     
   	<EditText
	    android:id="@+id/password"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:hint="@string/password_hint"
	    android:inputType="textPassword"
	    android:imeOptions="actionSend"
	    android:textColor="#ffffff" />
   	
   	<EditText
	    android:id="@+id/password2"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    android:hint="@string/password_hint2"
	    android:inputType="textPassword"
	    android:imeOptions="actionSend"
	    android:textColor="#ffffff" />
    
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onSignupButtonClicked"
        android:text="@string/sign_up"
        android:textColorHint="@color/silver"
        android:textColor="@color/white" />

</LinearLayout>